@@ -15,15 +15,17 @@
  */
 package io.gatling.mojo;
 
+import org.apache.maven.plugin.logging.Log;
+
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.net.URLDecoder;
+import java.net.*;
+import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.function.Function;
 import java.util.jar.Attributes;
 import java.util.jar.JarEntry;
 import java.util.jar.JarOutputStream;
@@ -67,46 +69,68 @@ public final class MojoUtils {
    * Create a jar with just a manifest containing a Main-Class entry for BooterConfiguration and a Class-Path entry
    * for all classpath elements.
    *
-   * @param classPath List of all classpath elements.
+   * @param classPath      List of all classpath elements.
    * @param startClassName The classname to start (main-class)
    * @return The file pointing to the jar
    * @throws java.io.IOException When a file operation fails.
    */
-  public static File createBooterJar(List<String> classPath, String startClassName) throws IOException {
+  public static File createBooterJar(List<String> classPath, String startClassName, Log logger) throws IOException {
     File file = File.createTempFile("gatlingbooter", ".jar");
     file.deleteOnExit();
+
+    Manifest manifest = new Manifest();
+
+    Path parent = file.getParentFile().getCanonicalFile().toPath();
+
+    manifest.getMainAttributes().putValue(Attributes.Name.MANIFEST_VERSION.toString(), "1.0");
+    // JAR spec requires relative urls
+    manifest.getMainAttributes().putValue(Attributes.Name.CLASS_PATH.toString(), serializeClasspath(classPath, classPathElement -> toRelativeClasspathElementUri(parent, classPathElement, logger)));
+    // but it such a pita do deal with in ZincCompiler, so lets duplicate
+    manifest.getMainAttributes().putValue("Absolute-" + Attributes.Name.CLASS_PATH, serializeClasspath(classPath, classPathElement -> toAbsoluteClasspathElementUri(classPathElement)));
+    manifest.getMainAttributes().putValue(Attributes.Name.MAIN_CLASS.toString(), startClassName);
 
     try (JarOutputStream jos = new JarOutputStream(new FileOutputStream(file))) {
       jos.setLevel(JarOutputStream.STORED);
       JarEntry je = new JarEntry("META-INF/MANIFEST.MF");
       jos.putNextEntry(je);
-
-      Manifest manifest = new Manifest();
-
-      // we can't use StringUtils.join here since we need to add a '/' to
-      // the end of directory entries - otherwise the jvm will ignore them.
-      StringBuilder cp = new StringBuilder();
-      for (String el : classPath) {
-        // NOTE: if File points to a directory, this entry MUST end in '/'.
-        cp.append(getURL(new File(el)).toExternalForm()).append(" ");
-      }
-      cp.setLength(cp.length() - 1);
-
-      manifest.getMainAttributes().putValue(Attributes.Name.MANIFEST_VERSION.toString(), "1.0");
-      manifest.getMainAttributes().putValue(Attributes.Name.CLASS_PATH.toString(), cp.toString());
-      manifest.getMainAttributes().putValue(Attributes.Name.MAIN_CLASS.toString(), startClassName);
-
       manifest.write(jos);
     }
 
     return file;
   }
 
-  public static URL getURL(File file) throws MalformedURLException {
+  private static String serializeClasspath(List<String> classPath, Function<File, String> toUri) {
+    StringBuilder cp = new StringBuilder();
+    for (String el : classPath) {
+      File classPathElement = new File(el);
+      String uri = toUri.apply(classPathElement);
+      cp.append(uri);
+      // NOTE: if File points to a directory, this entry MUST end in '/'.
+      if (classPathElement.isDirectory() && !uri.endsWith("/")) {
+        cp.append('/');
+      }
 
-    // encode any characters that do not comply with RFC 2396
-    // this is primarily to handle Windows where the user's home directory contains spaces
+      cp.append(' ');
+    }
 
-    return new URL(file.toURI().toASCIIString());
+    cp.setLength(cp.length() - 1);
+
+    return cp.toString();
+  }
+
+  private static String toAbsoluteClasspathElementUri(File classPathElement) {
+    return classPathElement.toURI().toASCIIString();
+  }
+
+  private static String toRelativeClasspathElementUri(Path parent, File classPathElement, Log logger) {
+    try {
+      return new URI(null, parent.relativize(classPathElement.toPath()).toString(), null).toASCIIString();
+    } catch (IllegalArgumentException e) {
+      logger.error("Boot Manifest-JAR contains absolute paths in classpath " + classPathElement.getPath());
+      return classPathElement.toURI().toASCIIString();
+    } catch (URISyntaxException e) {
+      // This is really unexpected, so fail
+      throw new IllegalArgumentException("Could not create a relative path " + classPathElement + " against " + parent, e);
+    }
   }
 }
